--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2573,7 +2573,7 @@ ul.team-social li a {
     padding: 8px 9px;
 }
 .team-item-content:hover .team-info {
-    top: 0;
+    top: 40%;
     bottom: 0;
 }
 .team-item-content:hover img {
